video1 resize + title arabic

--- a/HelloHTML/index.html
+++ b/HelloHTML/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <!-- All the content of the webpage -->
-    <h1>I am a title :)</h1>
+    <h1>عطشان</h1>
     <h6>I am a subtitle</h6>
     <p>I am a paragraph of <b>text</b>.</p>
     <p>I am another <i>paragraph</i> of text.</p>
@@ -40,5 +40,9 @@
     <!-- image as link -->
     <a href="http://duckduckgo.com"><img src="kitty.jpg" alt-text="what is the image of" /></a>
 
+    <!-- video -->
+    <video> width="480" height="270" controls>
+      <source src="Redha_Masood_30MFF.mp4" type="video/mp4">
+    </video>
   </body>
 </html>
