--- a/HelloHTML/index.html
+++ b/HelloHTML/index.html
@@ -1,13 +1,13 @@
 <html>
 <!-- root of DOM -->
   <head>
-    <title>My Cool Page!</title>
+    <title>Thirsty</title>
   </head>
 
   <body>
     <!-- All the content of the webpage -->
-    <h1>عطشان</h1>
-    <h6>I am a subtitle</h6>
+    <h1>Thirsty</h1>
+    <!-- <h6>I am a subtitle</h6>
     <p>I am a paragraph of <b>text</b>.</p>
     <p>I am another <i>paragraph</i> of text.</p>
 
@@ -21,27 +21,27 @@
       <li>item 1</li>
       <li>item 2</li>
       <li>item 3</li>
-    </ul>
+    </ul> -->
 
     <!-- generic -->
     <!-- <div id="my-unique-id"> -->
-      a genertic division/block in the <span>page</span>
+      <!-- a genertic division/block in the <span>page</span> -->
     <!-- </div> -->
 
     <!-- links -->
-    <a href="page.html">I am a link to another page</a>
-    <a href="#my-unique-id">internal link</a>
+    <!-- <a href="page.html">I am a link to another page</a>
+    <a href="#my-unique-id">internal link</a> -->
 
-    <br/>
+    <!-- <br/> -->
     <!-- images -->
-    <img src="kitty.jpg" alt-text="what is the image of" />
+    <!-- <img src="kitty.jpg" alt-text="what is the image of" />
     <img src="cat-cat-dance.gif" alt-text="what is the image of" />
-    <img src="https://media.istockphoto.com/photos/european-short-haired-cat-picture-id1072769156?k=20&m=1072769156&s=612x612&w=0&h=k6eFXtE7bpEmR2ns5p3qe_KYh098CVLMz4iKm5OuO6Y=" />
+    <img src="https://media.istockphoto.com/photos/european-short-haired-cat-picture-id1072769156?k=20&m=1072769156&s=612x612&w=0&h=k6eFXtE7bpEmR2ns5p3qe_KYh098CVLMz4iKm5OuO6Y=" /> -->
     <!-- image as link -->
-    <a href="http://duckduckgo.com"><img src="kitty.jpg" alt-text="what is the image of" /></a>
+    <!-- <a href="http://duckduckgo.com"><img src="kitty.jpg" alt-text="what is the image of" /></a> -->
 
     <!-- video -->
-    <video> width="480" height="270" controls>
+    <video> width="1920" height="1080" controls>
       <source src="Redha_Masood_30MFF.mp4" type="video/mp4">
     </video>
   </body>
