subtitle + video resize

--- a/HelloHTML/index.html
+++ b/HelloHTML/index.html
@@ -7,6 +7,7 @@
   <body>
     <!-- All the content of the webpage -->
     <h1>Thirsty</h1>
+    <h2> Did you drink enough water today?</h2>
     <!-- <h6>I am a subtitle</h6>
     <p>I am a paragraph of <b>text</b>.</p>
     <p>I am another <i>paragraph</i> of text.</p>
@@ -41,7 +42,7 @@
     <!-- <a href="http://duckduckgo.com"><img src="kitty.jpg" alt-text="what is the image of" /></a> -->
 
     <!-- video -->
-    <video> width="1920" height="1080" controls>
+    <video> width="480" height="270" controls>
       <source src="Redha_Masood_30MFF.mp4" type="video/mp4">
     </video>
   </body>
