--- a/HelloHTML/index.html
+++ b/HelloHTML/index.html
@@ -2,39 +2,6 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <style>
-      body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        height: 100vh;
-        margin: 0;
-      }
-
-      .video-container {
-        position: relative;
-        width: 80%;
-      }
-
-      video { 
-        width: 100%;
-        height: auto;
-        display: block;
-      }
-
-      .title {
-        font-size: 24px;
-        font-weight: bold;
-        margin-bottom: 10px;
-      }
-
-      .subtitle {
-        font-size: 18px;
-        color: #777;
-        margin-bottom: 20px;
-      }
-    </style>
     <title> Thirsty </title>
   </head>
   <body>
@@ -42,48 +9,9 @@
     <div class ="subtitle">Did you drink enough water today?</div>
 
     <div class=" video-container">
-      <video controls autoplay>
+      <video controls>
         <source src="Redha_Masood_30MFF.mp4" type="video/mp4">
       </video>
     </div>
 </body>
 </html>
-
-
-    <!-- <h1>Thirsty</h1>
-    <h2> Did you drink enough water today?</h2> -->
-    <!-- <h6>I am a subtitle</h6>
-    <p>I am a paragraph of <b>text</b>.</p>
-    <p>I am another <i>paragraph</i> of text.</p>
-
-    <ol>
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
-    </ol>
-
-    <ul>
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
-    </ul> -->
-
-    <!-- generic -->
-    <!-- <div id="my-unique-id"> -->
-      <!-- a genertic division/block in the <span>page</span> -->
-    <!-- </div> -->
-
-    <!-- links -->
-    <!-- <a href="page.html">I am a link to another page</a>
-    <a href="#my-unique-id">internal link</a> -->
-
-    <!-- <br/> -->
-    <!-- images -->
-    <!-- <img src="kitty.jpg" alt-text="what is the image of" />
-    <img src="cat-cat-dance.gif" alt-text="what is the image of" />
-    <img src="https://media.istockphoto.com/photos/european-short-haired-cat-picture-id1072769156?k=20&m=1072769156&s=612x612&w=0&h=k6eFXtE7bpEmR2ns5p3qe_KYh098CVLMz4iKm5OuO6Y=" /> -->
-    <!-- image as link -->
-    <!-- <a href="http://duckduckgo.com"><img src="kitty.jpg" alt-text="what is the image of" /></a> -->
-
-    <!-- video -->
-  
