--- a/assignment 2/index.html
+++ b/assignment 2/index.html
@@ -1,10 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head>
 <style>
+body {
+  display: flex;
+  justify-content: center; /* Horizontal centering */
+  align-items: center; /* Vertical centering */
+  height: 100vh; /* Set the body height to the full viewport height */
+}
+
 div.gallery {
   margin: 5px;
   border: 1px solid #ccc;
-  float: left;
   width: 180px;
 }
 
@@ -37,6 +44,7 @@ div.desc {
     <img src="redha-commlab2.svg" alt="outline" width="600" height="400">
   </a>
   <div class="desc">Outline of Qatif Water Tower</div>
+</div>
 
 </body>
 </html>
