--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redha Al Hammad Communications Lab</title>
-</head>
-<body>
-    <h1>Redha Al Hammad Communications Lab Assignments</h1>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Redha Al Hammad</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <main class="min-vh-100 bg-dark pt-4">
+        <div class="bg-white p-4 text-center">
+            <h1>Redha Al Hammad</h1>
+            
 
-    <ul>
-        <li>
-            <a href="hello-html/index.html">30 Minute Film Festival Website</a>
-        </li>
-        <li>
-            <a href="scroll-animation/index.html">Scroll Animation</a>
-        </li>
-        <li>
-            <a href="assignment-2/index.html">Photoshop & Illustrator Assignment</a>
-        </li>
-    </ul>
-</body>
+            <nav class="align-items-center gap-5 justify-content-center row row-cols-auto">
+                <a class="opacity-75 text-dark" href="projects/index.html">Projects</a>
+                <a class="opacity-75 text-dark" href="https://redhaalhammad.cargo.site">Photography</a>
+                <a class="opacity-75 text-dark" href="about/index.html">About</a>
+            </nav>
+        </div>
+    </main>
+  </body>
 </html>
