--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main class="min-vh-100 bg-dark pt-4">
+    <main class="main-home min-vh-100 bg-dark pt-4">
         <div class="bg-white p-4 text-center">
+          
+            <!-- TITLE -->
             <h1>Redha Al Hammad</h1>
             
-
             <nav class="align-items-center gap-5 justify-content-center row row-cols-auto">
                 <a class="opacity-75 text-dark" href="projects/index.html">Projects</a>
                 <a class="opacity-75 text-dark" href="https://redhaalhammad.cargo.site">Photography</a>
