--- a/about/index.html
+++ b/about/index.html
@@ -26,8 +26,8 @@
             </nav>
         </div>
 
-        <section class="container mt-5">
-            <div class="row row-cols-md-2 gy-4">
+        <section class="container mt-5 pb-5">
+            <div class="row row-cols-md-2 gy-4 align-items-center">
                 <div>
                     <img src="../images/self-portrait.jpg" alt="Self portrait of author: Redha Al Hammad" class="img-fluid object-fit-cover">
                 </div>
